# nano-gpt

./: README.md  pyproject.toml
drafts_and_notes/: linear_layer_understanding.xlsx
src/nano_gpt/: input.sql  model.py
