[project]
name = "nano-gpt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shlyashl", email = "ay-ya@ya.ru"},
]
dependencies = ["torch>=2.5.1", "torchvision>=0.20.1", "torchaudio>=2.5.1", "tqdm>=4.67.1", "matplotlib>=3.9.3", "torchviz>=0.0.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
